--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -12,8 +12,9 @@
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "npm run build && eb list && eb create --sample udagram-api-dev && eb use udagram-api-dev && eb deploy",
+    "deploy_create": "npm run build && eb list && eb create --sample udagram-api-dev && eb use udagram-api-dev && eb deploy",
     "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "deploy": "eb list && eb use udagram-api-dev && eb deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
