--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,19 +79,27 @@ jobs:
             echo "# TODO: Install, build, deploy in both apps"
             npm run deploy
             
+# workflows:
+#   udagram:
+#     jobs:
+#       - build
+#       - hold:
+#           filters:
+#             branches:
+#               only:
+#                 - master
+#           type: approval
+#           requires:
+#             - build
+#       - deploy:
+#           requires:
+#             - hold
+
+#workflow v2:
 workflows:
-  udagram:
+  udagram
     jobs:
       - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - master
-          type: approval
-          requires:
-            - build
-      - deploy:
-          requires:
-            - hold
-
+      - deploy
+        requires:
+          - build
