--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,12 +53,12 @@ jobs:
             npm run api:build
     
 
-      # - run:
-      #     name: Deploy App
-      #     # TODO: Install, build, deploy in both apps
-      #     command: |
-      #       echo "# TODO: Install, build, deploy in both apps"
-      #       npm run deploy
+      - run:
+          name: Deploy App
+          # TODO: Install, build, deploy in both apps
+          command: |
+            echo "# TODO: Install, build, deploy in both apps"
+            npm run deploy
 
   # deploy step will run only after manual approval
   deploy:
@@ -72,34 +72,34 @@ jobs:
       - eb/setup
       - aws-cli/setup
       - checkout
-      - run:
-          name: Deploy App
-          # TODO: Install, build, deploy in both apps
-          command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            npm run deploy
+      # - run:
+      #     name: Deploy App
+      #     # TODO: Install, build, deploy in both apps
+      #     command: |
+      #       echo "# TODO: Install, build, deploy in both apps"
+      #       npm run deploy
             
-# workflows:
-#   udagram:
-#     jobs:
-#       - build
-#       - hold:
-#           filters:
-#             branches:
-#               only:
-#                 - master
-#           type: approval
-#           requires:
-#             - build
-#       - deploy:
-#           requires:
-#             - hold
-
-#workflow v2:
 workflows:
-  udagram
+  udagram:
     jobs:
       - build
-      - deploy
-        requires:
-          - build
+      - hold:
+          filters:
+            branches:
+              only:
+                - master
+          type: approval
+          requires:
+            - build
+      - deploy:
+          requires:
+            - hold
+
+# #workflow v2:
+# workflows:
+#   udagram
+#     jobs:
+#       - build
+#       - deploy
+#         requires:
+#           - build
