--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -9,7 +9,7 @@ environment-defaults:
     repository: null
 global:
   application_name: udagram-api-node-14
-  branch: origin
+  branch: main
   default_ec2_keyname: vockey
   default_platform: Node.js 14 running on 64bit Amazon Linux 2
   default_region: us-east-1
