new initial eb init

--- a/.eb_first/config.yml
+++ b/.eb_first/config.yml
@@ -1,12 +1,15 @@
 branch-defaults:
   main:
     environment: udagram-api-dev
+  origin:
+    environment: udagram-api-dev
 environment-defaults:
   udagram-api-dev:
     branch: null
     repository: null
 global:
   application_name: udagram-api-node-14
+  branch: main
   default_ec2_keyname: vockey
   default_platform: Node.js 14 running on 64bit Amazon Linux 2
   default_region: us-east-1
@@ -14,6 +17,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: eb-cli
+  profile: default
+  repository: main
   sc: git
   workspace_type: Application
